--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
 
             <h3>Impressum</h3>
             <p>Bernhard Resl</p>
-            <p>Eichendorffstraße 64</p>
-            <p>4020 Linz</p>
+            <p>Musterstraße 1</p>
+            <p>Linz</p>
             <p>Tel.: 0680/2452546</p>
-            <p>E-Mail: bernhard.resl@gmx.at</p>
+            <p>E-Mail: musteremail@email.at</p>
 
         </div>
 
