--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p>Bernhard Resl</p>
             <p>Musterstraße 1</p>
             <p>Linz</p>
-            <p>Tel.: 0680/2452546</p>
+            <p>Tel.: 123456789</p>
             <p>E-Mail: musteremail@email.at</p>
 
         </div>
