--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <img src="codersbaylogo.jpg" alt="CodersBayLogo">
         </div>
 
-        <h3>Orientation-Projects</h3>
+        <h3>Education-Projects</h3>
 
 
         <div class="Java">
@@ -162,7 +162,7 @@
 
             <a title="Variablen, Datentypen, if/else, Zufallszahlen, Schleifen"
                href="https://drive.google.com/drive/folders/1OCAUrcgmRv8pJYfsdqC5QzTdxyBTY9nX?usp=sharing"
-               target="_blank">Java Woche 1</a>
+               target="_blank">Java Folder</a>
         </div>
 
         <div class="Web">
@@ -170,7 +170,7 @@
 
             <a title="Einführung HTML & CSS, gestaltung von Hotel Website"
                href="https://drive.google.com/drive/folders/1wpUbFohpiJ59BWj4SM96uIxDqhesGVs8?usp=sharing"
-               target="_blank">Web Woche 1</a>
+               target="_blank">Web Folder</a>
         </div>
 
     </section>
